fix: side bar scrollbar color

--- a/EFStudio/EFStudio.App/src/index.css
+++ b/EFStudio/EFStudio.App/src/index.css
@@ -172,6 +172,7 @@ body {
 }
 
 .dark {
+  color-scheme: dark;
   --background: oklch(0.148 0.004 228.8);
   --foreground: oklch(0.987 0.002 197.1);
   --card: oklch(0.218 0.008 223.9);
